# deepstream-cpp-yolov8-pipelines

./: .gitignore  README.md  docs.md
basic_pipeline/: CMakeLists.txt  config_infer_primary_yolov8.txt  main.cpp
deepstream_text_pipelines/: config_infer_primary_yolov8.txt  deepstream_app.txt
multistream_rtspout/: CMakeLists.txt  config_infer_primary_yolov8.txt  main.cpp
